Wait this isn't Mupen

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ PayloadConverter/ootcore/
 PayloadConverter/ooto/
 Scripts/Windows/.wget-hsts
 dist/
+dolphin/
 Mupen64Plus/
 SDK-config.json
 CustomActorToolkit/
