--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "modloader64",
-  "version": "1.3.24",
+  "version": "1.3.26",
   "description": "",
   "main": "./src/index.js",
   "scripts": {
@@ -17,7 +17,7 @@
     "fix": "npx eslint src/**/*.ts --fix",
     "dist": "npm run modules && npm run clean && npm install",
     "publish": "npm run bump && npm run dist",
-    "postinstall": "npm install typescript --global && npm install typedoc --global && tsc ./bin/postinstall.ts --esModuleInterop && npx patch-package && npm run build_api && npm link modloader64_api && npm run build_api && npm link modloader64_api && tsc ./build.ts --esModuleInterop && node ./build.js --step=installEmulator && tsc ./bin/index.ts --esModuleInterop && tsc ./bin/paker.ts --esModuleInterop && node ./bin/paker.js -i ./Mupen64Plus/emulator.pak -o ./Mupen64Plus && npm run build && node ./bin/postinstall.js && typedoc --out ./docs ./src && typedoc --out ./API/docs ./API/src",
+    "postinstall": "npm install typescript --global && npm install typedoc --global && tsc ./bin/postinstall.ts --esModuleInterop && npx patch-package && npm run build_api && npm link modloader64_api && npm run build_api && npm link modloader64_api && tsc ./build.ts --esModuleInterop && node ./build.js --step=installEmulator && tsc ./bin/index.ts --esModuleInterop && tsc ./bin/paker.ts --esModuleInterop && node ./bin/paker.js -i ./Mupen64Plus/emulator.pak -o ./Mupen64Plus && node ./bin/paker.js -i ./Dolphin/dolphin.pak -o ./Dolphin && npm run build && node ./bin/postinstall.js && typedoc --out ./docs ./src && typedoc --out ./API/docs ./API/src",
     "build_bin": "tsc ./build.ts --esModuleInterop && tsc ./bin/index.ts --esModuleInterop && tsc ./bin/postinstall.ts --esModuleInterop && tsc ./bin/paker.ts --esModuleInterop",
     "push": "node ./build.js --step=push",
     "pushLive": "node ./build.js --step=pushLive"
