--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,10 @@
     "paths": {
       "@sound/*": [
         "./build/emulator/*"
-      ]
+      ],
+      "@dolphin/*": [
+        "./build/dolphin/*"
+      ],
     }
   },
   "include": [
