--- a/API/package.json
+++ b/API/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "./src/index.js",
   "scripts": {
-    "tsc": "tsc --listEmittedFiles",
+    "tsc": "tsc -t es5 --listEmittedFiles",
     "build": "npm install && tsc ./build.ts --esModuleInterop && node ./build.js --step=prebuild && node ./build.js --step=build && npm run tsc && node ./build.js --step=postbuild"
   },
   "author": "Team-Ooto",
