--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
     "clean": "node ./build.js --step=clean",
     "modules": "node ./build.js --step=pushModules",
     "build": "tsc ./build.ts --esModuleInterop && node ./build.js --step=prebuild && node ./build.js --step=build && npm run tsc && node ./build.js --step=postbuild",
-    "build_dist": "tsc ./build.ts --esModuleInterop && node ./build.js --step=build && npm run tsc && node ./build.js --step=postbuild",
-    "build_api": "tsc ./API/build.ts --esModuleInterop && cd ./API && node ./build.js --step=prebuild && node ./build.js --step=build && npm run tsc && cd ./build && npm link && cd .. && node ./build.js --step=postbuild",
+    "build_dist": "tsc -t es5 ./build.ts --esModuleInterop && node ./build.js --step=build && npm run tsc && node ./build.js --step=postbuild",
+    "build_api": "tsc -t es5 ./API/build.ts --esModuleInterop && cd ./API && node ./build.js --step=prebuild && node ./build.js --step=build && npm run tsc && cd ./build && npm link && cd .. && node ./build.js --step=postbuild",
     "start": "node --inspect --expose-gc ./build/src/index.js --max_old_space_size=4096 --dir=build",
     "start_1": "node ./build/src/index.js --max_old_space_size=4096 --dir=build",
     "start_2": "node ./build.js --step=player2 && node ./build2/src/index.js -max_old_space_size=4096 --dir=build2",
     "fix": "npx eslint src/**/*.ts --fix",
     "dist": "npm run modules && npm run clean && npm install",
     "publish": "npm run bump && npm run dist",
-    "postinstall": "npm install typescript --global && npm install typedoc --global && tsc ./bin/postinstall.ts --esModuleInterop && npx patch-package && npm run build_api && npm link modloader64_api && npm run build_api && npm link modloader64_api && tsc ./build.ts --esModuleInterop && node ./build.js --step=installEmulator && tsc ./bin/index.ts --esModuleInterop && tsc ./bin/paker.ts --esModuleInterop && node ./bin/paker.js -i ./Mupen64Plus/emulator.pak -o ./Mupen64Plus && npm run build && node ./bin/postinstall.js && typedoc --out ./docs ./src && typedoc --out ./API/docs ./API/src",
-    "build_bin": "tsc ./build.ts --esModuleInterop && tsc ./bin/index.ts --esModuleInterop && tsc ./bin/postinstall.ts --esModuleInterop && tsc ./bin/paker.ts --esModuleInterop",
+    "postinstall": "npm install typescript --global && npm install typedoc --global && tsc ./bin/postinstall.ts --esModuleInterop && npx patch-package && npm run build_api && npm link modloader64_api && npm run build_api && npm link modloader64_api && tsc -t es5 ./build.ts --esModuleInterop && node ./build.js --step=installEmulator && tsc -t es5 ./bin/index.ts --esModuleInterop && tsc -t es5 ./bin/paker.ts --esModuleInterop && node ./bin/paker.js -i ./Mupen64Plus/emulator.pak -o ./Mupen64Plus && npm run build && node ./bin/postinstall.js && typedoc --out ./docs ./src && typedoc --out ./API/docs ./API/src",
+    "build_bin": "tsc -t es5 ./build.ts --esModuleInterop && tsc -t es5 ./bin/index.ts --esModuleInterop && tsc -t es5 ./bin/postinstall.ts --esModuleInterop && tsc -t es5 ./bin/paker.ts --esModuleInterop",
     "push": "node ./build.js --step=push",
     "pushLive": "node ./build.js --step=pushLive"
   },
